# staffing-portal

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  SPEC.md  bench-matches-dashboard.html  deploy.conf  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: staffing-portal-AutoDeploy.yml
app/: __init__.py  auth.py  config.py  lifespan.py  main.py  models.py
app/agents/shared/: skill_utils.py
app/agents/submit_demand/: __init__.py
app/agents/submit_demand/tools/: cosmos_store.py  matching_report_tool.py  request_store.py
app/data/: common_skills.json
app/routes/: __init__.py  admin.py  auth.py  manage.py  report.py
app/services/: __init__.py  equivalency_service.py  eval_cache.py  job_service.py  match_cache.py  semantic_cache.py
components/: __init__.py  ai_sm_bridge.py  matchmaker.py
conf/: career_levels.json  runtime_flags.json  skill_equivalencies.json
observability/: __init__.py  feedback.py
scripts/: copy-env-from-agent.ps1  copy-secrets-to-portal.ps1  migrate.py  seed.py
